--- a/login 1.html
+++ b/login 1.html
@@ -66,7 +66,7 @@
 
 			<div class="sign-up">
 				<p style="color: white;">Don't have an account?</p>
-				<a href="#">  Sign up</a>
+				<a href="signup.html">  Sign up</a>
 			</div>
 		</div>
 	</section>
